Remove DatatypeConverter